# mcp-searxng

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: test.yml
.ralph/: github-59.md
beads/: example.txt  mcp_fsm.bead  mcp_fsm.py  simple_fsm.txt
src/: main.py  searxng_api.py
tests/: test_beads.py  test_main.py  test_searxng_api.py
